# fork-cad-mayo

./: CMakeLists.txt
.github/workflows/: ci.yml
src/app/: dialog_inspect_xde.cpp  document_tree_node_properties_providers.cpp  main.cpp  qstring_conv.h  recent_files.cpp  version.h.cmake  widget_clip_planes.cpp  widget_clip_planes.h  widget_gui_document.cpp  widget_occ_view_impl.cpp
src/base/: brep_utils.cpp  brep_utils.h  caf_utils.cpp  caf_utils.h  document.cpp  mesh_utils.cpp  mesh_utils.h  occ_handle.h  string_conv.h  tkernel_utils.h
src/graphics/: graphics_mesh_data_source.cpp  graphics_mesh_object_driver.cpp  graphics_scene.cpp  graphics_scene.h  graphics_shape_object_driver.cpp  graphics_utils.cpp  graphics_utils.h
src/gui/: gui_document.cpp  gui_document.h  v3d_view_controller.cpp
src/io_dxf/: io_dxf.cpp
src/io_gmio/: io_gmio_amf_writer.cpp
src/io_image/: io_image.cpp  io_image.h
src/io_occ/: io_occ_brep.cpp  io_occ_caf.cpp  io_occ_gltf_writer.cpp  io_occ_obj_writer.cpp  io_occ_step.cpp  io_occ_stl.cpp
src/io_off/: io_off_reader.cpp
src/io_ply/: io_ply_reader.cpp
src/measure/: measure_display.cpp  measure_display.h  measure_tool_brep.cpp
tests/: test_base.cpp
